<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16dp"
            android:gravity="center"
            android:text="18-09-2018"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_4dp"
            android:gravity="center"
            android:text="20 : 00"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/tv_date" />

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/tv_date">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="@dimen/margin_8dp">

                <ProgressBar
                    android:id="@+id/pb_home_image"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:padding="@dimen/margin_16dp" />

                <ImageView
                    android:id="@+id/iv_detail_home_team"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_launcher_background"
                    android:textSize="@dimen/text_20sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tv_detail_home_team"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_detail_score_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_32sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_4dp"
                android:layout_marginRight="@dimen/margin_4dp"
                android:gravity="center"
                android:text="@string/vs"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_32sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_detail_score_away"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_32sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="@dimen/margin_8dp">

                <ProgressBar
                    android:id="@+id/pb_away_image"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:padding="@dimen/margin_16dp" />

                <ImageView
                    android:id="@+id/iv_detail_away_team"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:gravity="center"
                    android:src="@drawable/ic_launcher_background"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tv_detail_away_team"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_16sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/layout">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_16dp">

                <TextView
                    android:id="@+id/tv_goals_home"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/goals"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:id="@+id/tv_goals_away"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="right" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_16dp">

                <TextView
                    android:id="@+id/tv_shoot_home"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/shoot"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:id="@+id/tv_shoot_away"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="right" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/layout2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_16dp"
                android:gravity="center"
                android:text="@string/lineups"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_16dp">

                <TextView
                    android:id="@+id/tv_home_goals_keeper"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/goals_keeper"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:id="@+id/tv_away_goals_keeper"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="right" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_16dp">

                <TextView
                    android:id="@+id/tv_home_defend"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/defend"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:id="@+id/tv_away_defend"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="right" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_16dp">

                <TextView
                    android:id="@+id/tv_home_midfield"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/midfield"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:id="@+id/tv_away_midfield"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="right" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_16dp">

                <TextView
                    android:id="@+id/tv_home_forward"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/forward"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:id="@+id/tv_away_forward"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="right" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_16dp">

                <TextView
                    android:id="@+id/tv_home_subs"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/substitutes"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:id="@+id/tv_away_subs"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="right" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary" />

        </LinearLayout>


        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>